--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,5 @@
 $primary-color: #444;
+// #444
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
@@ -26,6 +27,16 @@ $background-opacity: 0.9;
                 background: rgba($primary-color, $background-opacity);
             }
         }
+    }
+}
+
+// set text color
+
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return black;
+    } @else {
+        @return white;
     }
 }
 
