--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,15 @@
 // widescreens
 @include mediaXl {
-
+    .projects {
+        grid-template-columns: repeat(4,1fr);
+    }
 }
 
 // laptops
 @include mediaLg {
-    
+    .projects {
+        grid-template-columns: repeat(3,1fr);
+    }
 }
 
 // tablets
@@ -30,7 +34,7 @@
             transform: translate3d(0,0,0);
         }
     }
-
+// direction of animation left-right
     .menu-nav {
         height: 75vh;
         transform: translate3d(-100%,0,0);
@@ -58,11 +62,19 @@
 
         grid-template-columns: 1fr;
     }
+
+    .projects {
+        grid-template-columns: repeat(2,1fr);
+    }
 }
 
 // smartphones
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
+    }
+
+    .projects {
+        grid-template-columns: 1fr;
     }
 }
