--- a/scss/main.scss
+++ b/scss/main.scss
@@ -114,7 +114,7 @@ main {
     border-bottom: $secondary-color 5px solid;
     border-radius: 2%;
 }
-
+// footer
 #main-footer {
     text-align: center;
     padding: 1rem;
@@ -122,4 +122,76 @@ main {
     color: set-text-color($primary-color);
     height: 60px;
 }
+
+// work page
+.projects {
+    display: grid;
+    grid-gap: 0.7rem;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+img {
+    width: 100%;
+    border: 2px $secondary-color solid;
+    border-radius: 2px;
+
+    &:hover {
+        opacity: 0.5;
+        @include easyOut;
+    }
+}
+
+// btn style
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+
+    &:hover {
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+}
+
+.btn-dark {
+    @extend .btn;
+    background: darken($primary-color, 50);
+    color:white;
+}
+
+.btn-light {
+    @extend .btn;
+    background: lighten($primary-color, 50);
+    color:#333;
+}
+
+// contact
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+        font-size: 2rem;
+        border: 3px white solid;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include easyOut;
+
+        &:hover {
+            padding: 0.5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+            cursor: pointer;
+
+            span {
+                color: set-text-color($secondary-color);
+            }
+        }
+    }
+}
+
 @import 'mobile';
